@@ -190,7 +190,7 @@ $description = nl2br($gallery->album->getDescription($index));
 
 	<!-- Custom Fields -->
 	<?php
-	displayPhotoFields($index, $extra_fields, true, in_array('EXIF', $extra_fields), $full);
+	echo displayPhotoFields($index, $extra_fields, true, in_array('EXIF', $extra_fields), $full);
 	?>
 
 <?php if (canVote() || $gallery->album->getPollShowResults()) : ?>
